[package]
name = "yew-app"
version = "0.1.0"
authors = ["RomChung <thelns@vip.qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
strum = "0.20.0"
strum_macros = "0.20.1"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.70"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.5", optional = true }
yew = { version = "0.17.4"}

[features]
web_sys = ["yew/web_sys"]

[dev-dependencies]
wasm-bindgen-test = "0.3"